fix: do not wrap div in a span

--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,7 @@
 .activitysubject .avatar-name-wrapper {
 	position: relative;
 	cursor: pointer;
+	display: inline-block;
 }
 
 .opengraph {
